--- a/study/study.cabal
+++ b/study/study.cabal
@@ -26,6 +26,10 @@ source-repository head
 library
   exposed-modules:
       Lib
+      Main
+      Math
+      MathSpec
+      Utils
   other-modules:
       Paths_study
   autogen-modules:
@@ -35,6 +39,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , hspec
   default-language: Haskell2010
 
 executable study-exe
@@ -48,20 +53,22 @@ executable study-exe
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , hspec
     , study
   default-language: Haskell2010
 
 test-suite study-test
   type: exitcode-stdio-1.0
-  main-is: Spec.hs
+  main-is: MainSpec.hs
   other-modules:
       Paths_study
   autogen-modules:
       Paths_study
   hs-source-dirs:
-      test
+      ./
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , hspec
     , study
   default-language: Haskell2010
